lambda/tests/compile-fail/non-async-main.rs
#[lambda]
#[tokio::main]
fn main() {}
